# cozyjet.ai

./: .cursorrules  .env.local  .firebaserc  .gitignore  .replit  Dockerfile  Procfile  asgi.py  check_tables.py  firebase.json  firestore.rules  next.config.ts  nixpacks.toml  package-lock.json  package.json  push-to-github.sh  pyproject.toml  railway.json  railway.toml  replit.md  skills-lock.json  tailwind.config.ts  test-api.ts  tsconfig.tsbuildinfo
.next/: app-build-manifest.json  build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  routes-manifest.json  trace
attached_assets/: Pasted--BACKEND-Installation-and-Environment-Setup-Python-3-11_1775123002956.txt  Pasted--CozyJet-Backend-Complete-Blueprint-for-Vibe-Coding-The_1774267253753.txt  Pasted--CozyJet-Backend-Complete-System-Prompt-The-Vision-Syst_1774415225016.txt  Pasted--CozyJet-Complete-Redesigned-Build-Prompt-The-Idea-Cozy_1774596817924.txt  Pasted--CozyJet-Complete-Revolutionary-Backend-Prompt-What-Thi_1775482266804.txt  Pasted--CozyJet-Complete-Revolutionary-Backend-Prompt-in-Essay_1775482488347.txt  Pasted--The-Core-Philosophy-Shift-Every-API-call-in-this-syste_1775296784182.txt  Pasted-BACKEND-Installation-and-Environment-Setup-Python-3-11-_1775296820095.txt  Pasted-CozyJet-is-an-AI-Marketing-Studio-designed-specifically_1774494502384.txt  Pasted-Every-API-call-in-this-system-must-be-treated-as-a-conv_1775186567561.txt  Pasted-Here-is-the-complete-well-detailed-prompt-for-both-the-_1774597148691.txt  Pasted-Installation-and-Environment-Setup-Python-3-11-or-highe_1775186603699.txt  (+10 more)
(+444 files in other folders)
