[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.88.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "cryptography>=46.0.6",
    "elevenlabs>=2.41.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "google-generativeai>=0.8.6",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]
